--- a/index.html
+++ b/index.html
@@ -77,6 +77,19 @@
         </div>
         </div>
     </div>
+    <div id="slider">
+         <h3>Top Destinations</h3>
+         <div id="slides">
+            <div> <h1 id="backward"><</h1></div>
+            <div><img src="" alt=""></div>
+            <div><img src="" alt=""></div>
+            <div><img src="" alt=""></div>
+            <div><img src="" alt=""></div>
+            <div><img src="" alt=""></div>
+            <div><img src="" alt=""></div>
+            <div><h1 id="forward">></h1></div>
+         </div>
+    </div>
 </body>
 </html>
 <script src="./scripts/index.js" type="module"></script>
