--- a/sub-div.html
+++ b/sub-div.html
@@ -6,32 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<style>
-    /* body{
-        /* background-color: grey; */
-        /* font-family: apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";; */
-    /* } */
-    #sub_di{
-        /* display: none; */
-        width: 180px;
-        background-color: white;
-        /* border: 5px solid red; */
-        height: 100px;
-         position: fixed;
-        right: 22%;
-        top: 7vh;
-        /* z-index: 1; */
-       
-        /* margin: auto; */
-    }
-    h5{
-        color: #666;
-        margin-left: 20px;
-        font-size: 10px;
-        margin-top: 20px;
-        font-family: apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";;
-    }
-</style>
+<link rel="stylesheet" href="styles\subdiv.css">
+
 <body>
 
     <div id="sub_di">
