--- a/index.html
+++ b/index.html
@@ -86,6 +86,20 @@
         </div>
         </div>
     </div>
+
+    <div id="slider">
+        <h3>Top Destinations</h3>
+        <div id="slides">
+           <div> <h1 id="backward"><</h1></div>
+           <div><img src="" alt=""></div>
+           <div><img src="" alt=""></div>
+           <div><img src="" alt=""></div>
+           <div><img src="" alt=""></div>
+           <div><img src="" alt=""></div>
+           <div><img src="" alt=""></div>
+           <div><h1 id="forward">></h1></div>
+        </div>
+   </div>
     
 
 
