--- a/index.html
+++ b/index.html
@@ -81,12 +81,11 @@
          <h3>Top Destinations</h3>
          <div id="slides">
             <div> <h1 id="backward"><</h1></div>
-            <div><img src="" alt=""></div>
-            <div><img src="" alt=""></div>
-            <div><img src="" alt=""></div>
-            <div><img src="" alt=""></div>
-            <div><img src="" alt=""></div>
-            <div><img src="" alt=""></div>
+            <div><img id="img0" src="" alt=""><p id="place0"></p></div>
+            <div><img src="" id="img1" alt=""><p id="place1"></p></div>
+            <div><img src="" id="img2" alt=""><p id="place2"></p></div>
+            <div><img src="" id="img3" alt=""><p id="place3"></p></div>
+            <div><img src="" id="img4" alt=""><p id="place4"></p></div>
             <div><h1 id="forward">></h1></div>
          </div>
     </div>
