--- a/addressPage.html
+++ b/addressPage.html
@@ -7,8 +7,8 @@
     <title>Address Page</title>
     <link rel="stylesheet" href="./address.css">
 
-    <link rel="stylesheet" href="./successful.css">
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="successful.css">
+    <!-- <link rel="stylesheet" href="./styles.css"> -->
 
 
 
