--- a/failuer.html
+++ b/failuer.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Failuer PAge PAyment</title>
-    <link rel="stylesheet" href="../Styles/successful.css">
-    <link rel="stylesheet" href="../Styles/footer.css">
+    <link rel="stylesheet" href="successful.css">
+    <!-- <link rel="stylesheet" href="../Styles/footer.css"> -->
     <link rel="stylesheet" href="../Styles/styles.css">
 </head>
 <body>
