--- a/successful.html
+++ b/successful.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Successful Page</title>
     <link rel="stylesheet" href="../Styles/successful.css">
-    <link rel="stylesheet" href="../Styles/footer.css">
-    <link rel="stylesheet" href="../Styles/styles.css">
+    <!-- <link rel="stylesheet" href="../Styles/footer.css"> -->
+    <!-- <link rel="stylesheet" href="../Styles/styles.css"> -->
 </head>
 <body>
     <marquee behavior="slide" direction="down" loop="1" scrollamount="10">
@@ -16,9 +16,9 @@
         </div>
         <div id="success">
             <h1>Order Placed successfully!! 😊😊</h1>
-            <h3 id="dispatch">We will Dilever your product in 3 Hours 🚚</h3>
+            <h3 id="dispatch">We will Book your Room in 3 Hours 🚚</h3>
             <p id="orderid">Order ID - 235689</p>
-            <a href="../index.html">Keep Shopping 🛒</a>  
+            <a href="../index.html">Keep Booking 🛒</a>  
             <!-- // index page needs to be Integrated here -->
           </div>
     </marquee> 
