--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="./styles/index.css">
 </head>
 <body>
+<div id="simba">
     <div id="navbar">
-      
+
     </div>
     <div id="searchbar">
         <div>
@@ -78,7 +79,7 @@
         </div>
     </div>
     <div id="slider">
-         <h3>Top Destinations</h3>
+         <h3 id="sliderh3">Top Destinations</h3>
          <div id="slides">
             <div> <h1 id="backward"><</h1></div>
             <div><img id="img0" src="" alt=""><p id="place0"></p></div>
@@ -89,6 +90,174 @@
             <div><h1 id="forward">></h1></div>
          </div>
     </div>
+    <div id="middle"> 
+        <div id="centerone"> 
+            <div>
+            <h3 id="h3center">Fully Managed Communities By Tripvillas</h3>
+            </div>
+            <div id="services">
+            <div>
+              <img src="https://d2vcelvjdj7n25.cloudfront.net/newhome/icons/housekeeper.svg"alt="">
+              <p class="centertag">High Quality housekeeping</p>
+            </div>
+            <div>
+                <img src="https://d2vcelvjdj7n25.cloudfront.net/newhome/icons/towel.svg"alt="">
+                <p class="centertag">Comfortable Linen and Toiletries</p>
+              </div>
+              <div>
+                <img src="https://d2vcelvjdj7n25.cloudfront.net/newhome/icons/bed.svg"alt="">
+                <p class="centertag">Quality Furniture & Fittings</p>
+              </div>
+              <div>
+                <img src="https://d2vcelvjdj7n25.cloudfront.net/newhome/icons/dinner.svg"alt="">
+                <p class="centertag">Food Delivery Or Central Restaurant</p>
+              </div>
+            </div>
+        </div>
+        <div id="centertwo">
+            <div>
+                <div class="centerdiv">
+                <img class="centerimg" src="https://d2vcelvjdj7n25.cloudfront.net/media/gated_community/16720/photo_1024/3a17e0ebf71b11e992500a8e1b1ce4da_photo_1024.jpeg" alt="">
+                </div>
+                <div class="place">
+                <h3 >Tata Rio De Goa</h3>
+               </div>
+               <div class="city">
+                <p >Dabolim, Goa</p>
+               </div>  
+            </div>
+            <div>
+                <div class="centerdiv">
+                <img class="centerimg" src="https://d2vcelvjdj7n25.cloudfront.net/media/gated_community/16724/photo_1024/3cfe907bf1a711e9924e0a8e1b1ce4da_photo_1024.jpeg" alt="">
+                </div>
+                <div class="place">
+                <h3 >Kenisha Holiday Homes</h3>
+               </div>
+               <div class="city">
+                <p >Pawasalwadi, Maharashtra</p>
+               </div>  
+            </div>
+            <div>
+                <div class="centerdiv">
+                <img class="centerimg" src="https://d2vcelvjdj7n25.cloudfront.net/media/gated_community/16722/photo_1024/d9d86936f1a311e9924e0a8e1b1ce4da_photo_1024.jpeg" alt="">
+                </div>
+                <div class="place">
+                <h3 >White Villas Shahapur</h3>
+               </div>
+               <div class="city">
+                <p >Shahapur, Maharashtra</p>
+               </div>  
+            </div>
+            <div>
+                <div class="centerdiv">
+                <img class="centerimg" src="https://d2vcelvjdj7n25.cloudfront.net/media/gated_community/16721/photo_1024/a85131caf1a511e9924e0a8e1b1ce4da_photo_1024.jpeg" alt="">
+                </div>
+                <div class="place">
+                <h3 >Puravankara Adora De Goa</h3>
+               </div>
+               <div class="city">
+                <p >Dabolim, Goa</p>
+               </div>  
+            </div>
+            <div>
+                <div class="centerdiv">
+                <img class="centerimg" src="https://d2vcelvjdj7n25.cloudfront.net/media/gated_community/16723/photo_1024/14650812f1a811e9924e0a8e1b1ce4da_photo_1024.jpeg" alt="">
+                </div>
+                <div class="place">
+                <h3 >White Villas Kasara</h3>
+               </div>
+               <div class="city">
+                <p >Kasara, Maharashtra</p>
+               </div>  
+            </div>
+            <div>
+                <div class="centerdiv">
+                <img class="centerimg" src="https://d2vcelvjdj7n25.cloudfront.net/media/gated_community/16725/photo_1024/cc19e8ccf70e11e992500a8e1b1ce4da_photo_1024.jpeg" alt="">
+                </div>
+                <div class="place">
+                <h3 >Umiya Serene In Candolim</h3>
+               </div>
+               <div class="city">
+                <p >Nerul, Goa</p>
+               </div>  
+            </div>
+            <div>
+                <div class="centerdiv">
+                <img class="centerimg" src="https://d2vcelvjdj7n25.cloudfront.net/media/gated_community/16726/photo_1024/213f117ff1a711e9924e0a8e1b1ce4da_photo_1024.jpeg" alt="">
+                </div>
+                <div class="place">
+                <h3 >Oasis Alibaug</h3>
+               </div>
+               <div class="city">
+                <p >Alibag, Maharashtra</p>
+               </div>  
+            </div>
+            <div>
+                <div class="centerdiv">
+                <img class="centerimg" src="https://d2vcelvjdj7n25.cloudfront.net/media/gated_community/16727/photo_1024/92a02d4af1a511e9924e0a8e1b1ce4da_photo_1024.jpeg" alt="">
+                </div>
+                <div class="place">
+                <h3 >Dreamz Shiroda</h3>
+               </div>
+               <div class="city">
+                <p >Shiroda, Maharashtra</p>
+               </div>  
+            </div>
+            <div>
+                <div class="centerdiv">
+                <img class="centerimg" src="https://d2vcelvjdj7n25.cloudfront.net/media/gated_community/16728/photo_1024/de6bc87af1a411e9924e0a8e1b1ce4da_photo_1024.jpeg" alt="">
+                </div>
+                <div class="place">
+                <h3>Pristine Bay Mahabalipuram</h3>
+               </div>
+               <div class="city">
+                <p >Thenpattinam, Tamil Nadu</p>
+               </div>  
+            </div>
+            <div>
+                <div class="centerdiv">
+                <img class="centerimg" src="https://d2vcelvjdj7n25.cloudfront.net/media/gated_community/16729/photo_1024/58bf80c4f70b11e992500a8e1b1ce4da_photo_1024.jpeg" alt="">
+                </div>
+                <div class="place">
+                <h3 >Ampelon Chikkaballapur</h3>
+               </div>
+               <div class="city">
+                <p >Chikkaballapur, Karnataka</p>
+               </div>  
+            </div>
+        </div>
+    </div>
+</div>
+<div id="investment">
+    <div>
+        <div>
+            <h3>Holiday Home Investment Opportunities</h3>
+        </div>
+        <div id="investdiv">
+            <div><img src="https://d2vcelvjdj7n25.cloudfront.net/newhome/icons/growth.svg" alt=""><p>Low Cost High Appreciation</p></div>
+            <div><img src="https://d2vcelvjdj7n25.cloudfront.net/newhome/icons/maids.svg" alt=""><p>Professionally Managed</p></div>
+            <div><img src="https://d2vcelvjdj7n25.cloudfront.net/newhome/icons/give-money.svg" alt=""><p>Guaranteed To Produce Income</p></div>
+            <div><img src="https://d2vcelvjdj7n25.cloudfront.net/newhome/icons/plan.svg" alt=""><p>We Designed Floor Plans</p></div>
+        </div>
+        <div>
+            <button>EXPLORE INVESTMENT OPPURTUNITIES</button>
+        </div>
+    </div>
+    <div >
+        <div>
+            <h3>Are You A Holiday Home Owner/Manager?</h3>
+        </div>
+        <div id="userdiv">
+            <div><img src="https://d2vcelvjdj7n25.cloudfront.net/newhome/icons/network.svg" alt=""><p>Get Bookings From 100+ Websites</p></div>
+            <div><img src="https://d2vcelvjdj7n25.cloudfront.net/newhome/icons/layout.svg" alt=""><p>One Dashboard - Total Control</p></div>
+            <div><img src="https://d2vcelvjdj7n25.cloudfront.net/newhome/icons/flash.svg" alt=""><p>Instant Book Or Request To Book</p></div>
+            <div><img src="https://d2vcelvjdj7n25.cloudfront.net/newhome/icons/smartphone-call.svg" alt=""><p>Both iOS & Android App Available.</p></div>
+        </div>
+        <div>
+            <button>LIST YOUR PROPERTY</button>
+        </div>
+    </div>
+</div>
 </body>
 </html>
 <script src="./scripts/index.js" type="module"></script>
