--- a/addressPage.html
+++ b/addressPage.html
@@ -76,4 +76,4 @@
     </div>
 </body>
 </html>
-<script src="./address.js" type="module"></script>
+<script src="./address." type="module"></script>
