--- a/paymentPage.html
+++ b/paymentPage.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Payment Page</title>
-    <link rel="stylesheet" href="./Styles/paymentPage.css">
+    <link rel="stylesheet" href="paymentPage.css">
 </head>
 <body>
 <body>
