--- a/index.html
+++ b/index.html
@@ -137,12 +137,12 @@
 
             <div id="email_box">
 
-                <input type="text" id="email_b" placeholder="Email Address">
+                <input type="email" id="email_b" placeholder="Email Address">
 
             </div>
 
             <div id="pass_box">
-                <input type="text" id="pass_b" placeholder="Password">
+                <input type="password" id="pass_b" placeholder="Password">
             </div>
 
             <div id="naming">
@@ -296,11 +296,11 @@
          <h3 id="sliderh3">Top Destinations</h3>
          <div id="slides">
             <div style="display:flex ; justify-content: center; align-items: center;"> <i class="fa-solid fa-angle-left"></i></div>
-            <div class="midc"><img id="img0" src="" alt=""><p id="place0"></p></div>
-            <div class="midc"><img src="" id="img1" alt=""><p id="place1"></p></div>
-            <div class="midc"><img src="" id="img2" alt=""><p id="place2"></p></div>
-            <div class="midc"><img src="" id="img3" alt=""><p id="place3"></p></div>
-            <div class="midc"><img src="" id="img4" alt=""><p id="place4"></p></div>
+            <div class="midc" id="midc1"><img id="img0" src="https://media.istockphoto.com/photos/india-goa-palolem-beach-picture-id535168027?k=20&m=535168027&s=612x612&w=0&h=L4IxMIBa6jpWytr_L9eKFwCz5Iqehlgvpmnxz1JMuC0=" alt=""><p id="place0">Goa</p></div>
+            <div class="midc" id="midc2"><img src="https://media.istockphoto.com/photos/sri-lanka-galle-fort-meeran-jumma-masjid-picture-id820812048?k=20&m=820812048&s=612x612&w=0&h=nVk88HQYT0X7S89L1jqpu7t7NWwdMoYbXiPyqlI4v1o=" id="img1" alt=""><p id="place1">Galle</p></div>
+            <div class="midc" id="midc3"><img src="https://media.istockphoto.com/photos/phiphi-island-krabi-province-thailand-picture-id526355851?k=20&m=526355851&s=612x612&w=0&h=zJeT7EvresWeYlI8vYKQkwETVDjFP3rlI3Qd1Slem1I=" id="img2" alt=""><p id="place2">Phuket</p></div>
+            <div class="midc" id="midc4"><img src="https://media.istockphoto.com/photos/sri-dalada-maligawa-or-the-temple-of-the-sacred-tooth-relic-kandy-sri-picture-id1155021690?k=20&m=1155021690&s=612x612&w=0&h=gPjcx4wkiQ0_X1DW2Z_MPLbz4YEO6eWbmMQQaKRe-eA=" id="img3" alt=""><p id="place3">Kandy</p></div>
+            <div class="midc" id="midc5"><img src="https://media.istockphoto.com/photos/angthong-national-marine-park-koh-samui-suratthani-thailand-picture-id940824162?k=20&m=940824162&s=612x612&w=0&h=Ujo0jInic2e6HXO1TImqzUvwSX-1yq0DfLKwQ7vuBUY=" id="img4" alt=""><p id="place4">Koh Samui</p></div>
             <div style="display:flex ; justify-content: center; align-items: center;"><i class="fa-solid fa-angle-right"></i></div>
          </div>
     </div>
@@ -314,15 +314,15 @@
               <img src="https://d2vcelvjdj7n25.cloudfront.net/newhome/icons/housekeeper.svg"alt="">
               <p class="centertag">High Quality housekeeping</p>
             </div>
-            <div>
+            <div >
                 <img src="https://d2vcelvjdj7n25.cloudfront.net/newhome/icons/towel.svg"alt="">
                 <p class="centertag">Comfortable Linen and Toiletries</p>
               </div>
-              <div>
+              <div >
                 <img src="https://d2vcelvjdj7n25.cloudfront.net/newhome/icons/bed.svg"alt="">
                 <p class="centertag">Quality Furniture & Fittings</p>
               </div>
-              <div>
+              <div >
                 <img src="https://d2vcelvjdj7n25.cloudfront.net/newhome/icons/dinner.svg"alt="">
                 <p class="centertag">Food Delivery Or Central Restaurant</p>
               </div>
@@ -330,7 +330,7 @@
         </div>
         <div id="centertwo">
             <div>
-                <div class="centerdiv">
+                <div class="centerdiv" id="centerdiv1">
                 <img class="centerimg" src="https://d2vcelvjdj7n25.cloudfront.net/media/gated_community/16720/photo_1024/3a17e0ebf71b11e992500a8e1b1ce4da_photo_1024.jpeg" alt="">
                 </div>
                 <div class="place">
@@ -341,7 +341,7 @@
                </div>  
             </div>
             <div>
-                <div class="centerdiv">
+                <div class="centerdiv" id="centerdiv2">
                 <img class="centerimg" src="https://d2vcelvjdj7n25.cloudfront.net/media/gated_community/16724/photo_1024/3cfe907bf1a711e9924e0a8e1b1ce4da_photo_1024.jpeg" alt="">
                 </div>
                 <div class="place">
@@ -352,7 +352,7 @@
                </div>  
             </div>
             <div>
-                <div class="centerdiv">
+                <div class="centerdiv" id="centerdiv3">
                 <img class="centerimg" src="https://d2vcelvjdj7n25.cloudfront.net/media/gated_community/16722/photo_1024/d9d86936f1a311e9924e0a8e1b1ce4da_photo_1024.jpeg" alt="">
                 </div>
                 <div class="place">
@@ -363,7 +363,7 @@
                </div>  
             </div>
             <div>
-                <div class="centerdiv">
+                <div class="centerdiv" id="centerdiv4">
                 <img class="centerimg" src="https://d2vcelvjdj7n25.cloudfront.net/media/gated_community/16721/photo_1024/a85131caf1a511e9924e0a8e1b1ce4da_photo_1024.jpeg" alt="">
                 </div>
                 <div class="place">
@@ -374,7 +374,7 @@
                </div>  
             </div>
             <div>
-                <div class="centerdiv">
+                <div class="centerdiv" id="centerdiv5">
                 <img class="centerimg" src="https://d2vcelvjdj7n25.cloudfront.net/media/gated_community/16723/photo_1024/14650812f1a811e9924e0a8e1b1ce4da_photo_1024.jpeg" alt="">
                 </div>
                 <div class="place">
@@ -385,7 +385,7 @@
                </div>  
             </div>
             <div>
-                <div class="centerdiv">
+                <div class="centerdiv" id="centerdiv6">
                 <img class="centerimg" src="https://d2vcelvjdj7n25.cloudfront.net/media/gated_community/16725/photo_1024/cc19e8ccf70e11e992500a8e1b1ce4da_photo_1024.jpeg" alt="">
                 </div>
                 <div class="place">
@@ -396,7 +396,7 @@
                </div>  
             </div>
             <div>
-                <div class="centerdiv">
+                <div class="centerdiv" id="centerdiv7">
                 <img class="centerimg" src="https://d2vcelvjdj7n25.cloudfront.net/media/gated_community/16726/photo_1024/213f117ff1a711e9924e0a8e1b1ce4da_photo_1024.jpeg" alt="">
                 </div>
                 <div class="place">
@@ -407,7 +407,7 @@
                </div>  
             </div>
             <div>
-                <div class="centerdiv">
+                <div class="centerdiv" id="centerdiv8">
                 <img class="centerimg" src="https://d2vcelvjdj7n25.cloudfront.net/media/gated_community/16727/photo_1024/92a02d4af1a511e9924e0a8e1b1ce4da_photo_1024.jpeg" alt="">
                 </div>
                 <div class="place">
@@ -418,7 +418,7 @@
                </div>  
             </div>
             <div>
-                <div class="centerdiv">
+                <div class="centerdiv" id="centerdiv9">
                 <img class="centerimg" src="https://d2vcelvjdj7n25.cloudfront.net/media/gated_community/16728/photo_1024/de6bc87af1a411e9924e0a8e1b1ce4da_photo_1024.jpeg" alt="">
                 </div>
                 <div class="place">
@@ -429,7 +429,7 @@
                </div>  
             </div>
             <div>
-                <div class="centerdiv">
+                <div class="centerdiv" id="centerdiv1">
                 <img class="centerimg" src="https://d2vcelvjdj7n25.cloudfront.net/media/gated_community/16729/photo_1024/58bf80c4f70b11e992500a8e1b1ce4da_photo_1024.jpeg" alt="">
                 </div>
                 <div class="place">
@@ -448,13 +448,13 @@
             <h3>Holiday Home Investment Opportunities</h3>
         </div>
         <div id="investdiv">
-            <div><img src="https://d2vcelvjdj7n25.cloudfront.net/newhome/icons/growth.svg" alt=""><p>Low Cost High Appreciation</p></div>
+            <div ><img src="https://d2vcelvjdj7n25.cloudfront.net/newhome/icons/growth.svg" alt=""><p>Low Cost High Appreciation</p></div>
             <div><img src="https://d2vcelvjdj7n25.cloudfront.net/newhome/icons/maids.svg" alt=""><p>Professionally Managed</p></div>
             <div><img src="https://d2vcelvjdj7n25.cloudfront.net/newhome/icons/give-money.svg" alt=""><p>Guaranteed To Produce Income</p></div>
             <div><img src="https://d2vcelvjdj7n25.cloudfront.net/newhome/icons/plan.svg" alt=""><p>We Designed Floor Plans</p></div>
         </div>
         <div>
-            <button>EXPLORE INVESTMENT OPPURTUNITIES</button>
+            <button id="btn1">EXPLORE INVESTMENT OPPURTUNITIES</button>
         </div>
     </div>
     <div >
@@ -468,7 +468,7 @@
             <div><img src="https://d2vcelvjdj7n25.cloudfront.net/newhome/icons/smartphone-call.svg" alt=""><p>Both iOS & Android App Available.</p></div>
         </div>
         <div>
-            <button>LIST YOUR PROPERTY</button>
+            <button id="btn2">LIST YOUR PROPERTY</button>
         </div>
     </div>
 </div>
@@ -477,25 +477,25 @@
     <h3 id="h3">Vacation Ideas</h3>
     <div id="bottomslider">
     <div style="display:flex ; justify-content: center; align-items: center;"><i class="fa-solid fa-angle-left"></i></div>
-    <div class="bottomc">
-    <div><img src="" id="simg0" class="bottomimg"  alt=""></div>
-    <div><p id="bottomp0" class="bottomp"></p></div>
+    <div class="bottomc" id="bottomc1">
+    <div><img src="https://images.unsplash.com/photo-1560185797-06657da66ae6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8cGh1a2V0JTIwcG9vbHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=800&q=60" id="simg0" class="bottomimg"  alt=""></div>
+    <div><p id="bottomp0" class="bottomp">Phuket's Best Pool Ideas</p></div>
     </div>
-    <div class="bottomc">
-        <div class="bottomimg"><img id="simg1"  src="" alt=""></div>
-        <div class="bottomp"><p id="bottomp1" ></p></div>
+    <div class="bottomc" id="bottomc2">
+        <div class="bottomimg"><img id="simg1"  src="https://images.unsplash.com/flagged/photo-1592544858330-7ac10a0468e5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8Y29vcmd8ZW58MHx8MHx8&auto=format&fit=crop&w=800&q=60" alt=""></div>
+        <div class="bottomp"><p id="bottomp1" >Coorg homestays</p></div>
     </div>
-    <div class="bottomc">
-        <div class="bottomimg"><img id="simg2"  src="" alt=""></div>
-        <div class="bottomp"><p id="bottomp2" ></p></div>
+    <div class="bottomc" id="bottomc3">
+        <div class="bottomimg" ><img id="simg2"  src="https://images.unsplash.com/photo-1585626687814-213dffcdb7bc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTF8fGxvbmF2YWxhJTIwYnVuZ2Fsb3d8ZW58MHx8MHx8&auto=format&fit=crop&w=800&q=60" alt=""></div>
+        <div class="bottomp"><p id="bottomp2" >Family Trip in Lonavala</p></div>
     </div>
-    <div class="bottomc">
-        <div class="bottomimg"><img id="simg3" src="" alt=""></div>
-        <div class="bottomp"><p id="bottomp3" ></p></div>
+    <div class="bottomc" id="bottomc4">
+        <div class="bottomimg"><img id="simg3" src="https://images.unsplash.com/photo-1553902000-e036b7d05af5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80" alt=""></div>
+        <div class="bottomp"><p id="bottomp3" >Bali Family Vibes</p></div>
     </div>
-    <div class="bottomc">
-        <div class="bottomimg"><img id="simg4"  src="" alt=""></div>
-        <div class="bottomp"><p id="bottomp4" ></p></div>
+    <div class="bottomc" id="bottomc5">
+        <div class="bottomimg"><img id="simg4"  src="https://images.unsplash.com/photo-1491497895121-1334fc14d8c9?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzB8fHNyaSUyMGxhbmthfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=800&q=60" alt=""></div>
+        <div class="bottomp"><p id="bottomp4" >Sri Lanka - Rural solitude and luxury combined</p></div>
     </div>
     <div style="display:flex ; justify-content: center; align-items: center;"><i class="fa-solid fa-angle-right"></i></div>
 </div>
