--- a/investment.html
+++ b/investment.html
@@ -10,7 +10,7 @@
   <body>
     <div id="main_box">
       <div id="navbar">
-        <a href="https://www.tripvillas.com/">
+        <a href="./index.html">
           <img src="https://d2v8elt324ukrb.cloudfront.net/static/new_template/img/logo-teal.450ffb75ec3e.png" alt="">
         </a>
         
