--- a/cartPage.html
+++ b/cartPage.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cart Page</title>
     <link rel="stylesheet" href="./cartPage.css" />
+    <link rel="stylesheet" href="./styles/index.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
+
+    <link rel="stylesheet" href="styles\subdiv.css">
+    <link rel="stylesheet" href="styles\signu.css">
+    <link rel="stylesheet" href="styles\login.css">
+    <link rel="stylesheet" href="styles\log2.css">
+    <link rel="stylesheet" href="styles\logout.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.0.0/jquery.magnific-popup.min.js"></script>
