--- a/addressPage.html
+++ b/addressPage.html
@@ -9,7 +9,15 @@
 
     <link rel="stylesheet" href="successful.css">
     <!-- <link rel="stylesheet" href="./styles.css"> -->
+    <link rel="stylesheet" href="./styles/index.css">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
+
+    <link rel="stylesheet" href="styles\subdiv.css">
+    <link rel="stylesheet" href="styles\signu.css">
+    <link rel="stylesheet" href="styles\login.css">
+    <link rel="stylesheet" href="styles\log2.css">
+    <link rel="stylesheet" href="styles\logout.css">
 
 
 
@@ -64,7 +72,7 @@
               />
             </div>
             <div class="space">
-              <button id="login"><a href="./paymentPage.html">Proceed to Checkout</a></button>
+              <button id="login"><a href="./successful.html">Proceed to Checkout</a></button>
               <!-- <a href="/Atul3/payment.html"><input type="submit" id="login" value="Proceed to Checkout" /></a> -->
             </div>
           </form>
@@ -77,3 +85,14 @@
 </body>
 </html>
 <script src="./address." type="module"></script>
+
+<script>
+  import navbar from "./components/navbar.js";
+
+  document.getElementById("container").innerHTML= navbar();
+
+
+
+</script>
+
+<script src="./components/navbar.js" type="module"></script>
