--- a/cartPage.html
+++ b/cartPage.html
@@ -141,7 +141,7 @@
              </div>
       
              <!-- <button id="btn123">BC</button> -->
-             <div id="dd" style="text-decoration: none;"><a href="./paymentPage.html"> CheckOut</a></div>
+             <div id="dd" "><a href="./addressPage.html" style="text-decoration: none;"> CheckOut</a></div>
              
           </div>
        </div>
@@ -195,5 +195,7 @@ import navbar from "../components/navbar.js";
 
 document.getElementById("container").innerHTML= navbar();
 
-
 </script>
+<script src="./scripts/index.js" type="module"></script>
+
+<script src="./components/navbar.js" type="module"></script>
